# boardroom

./: .gitignore  ARCHITECTURE.md  README.md  Start-Boardroom.command  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vitest.config.ts
app/: __init__.py  runner.py
app/agents/: __init__.py  base.py  ceo.py  cfo.py  chairperson.py  compliance.py  cto.py
app/memory/: __init__.py  embedder.py  outcome_feedback.py  retriever.py
app/notion/: __init__.py  client.py  executive_reviews_repo.py  mappers.py  prds_repo.py  strategic_decisions_repo.py
app/prompts/: ceo_v3.md  cfo_v3.md  chairperson_v3.md  compliance_v3.md  cto_v3.md
app/schemas/: __init__.py  decision_snapshot.py  prd_output.py  review_output.py
app/store/: __init__.py  event_store.py  locks.py  models.py
app/workflow/: __init__.py  decision_workflow.py  gates.py  states.py
docs/: README.md  Strategic-Decision-Making-Framework.md  api.md  architecture.md  data-model.md  guide_agents.md  live-governance-briefing.md  non-technical-local-run.md  setup.md  walkthrough.md
examples/: prd.md  review_ceo.md  review_cfo.md  review_chairperson.md  review_compliance.md  review_cto.md  strategic_decision.md
pages/: index.tsx
pages/api/: agent-configs.ts  health.ts
scripts/: dev.sh  local_start.sh  seed_postgres.ts  seed_postgres_data.ts  workflow.ts
src/: __init__.ts  runner.ts
src/agents/: base.ts  base_utils.ts
src/config/: agent_config.ts  (+1 more)
styles/: globals.css
tests/: test_agents_json_fallback.py  test_gates.py  test_prd_generation.py
(+231 files in other folders)
